--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       </section>
       <section class="buttons">
         <div class="operators">
-          <button onclick="deleteFunc()">DEL</button>
-          <button onclick="toScreen('+')">+</button>
-          <button onclick="toScreen('-')">-</button>
-          <button onclick="toScreen('*')">x</button>
-          <button onclick="toScreen('/')">/</button>
+          <button onclick="deleteFuncOp()">DEL</button>
+          <button onclick="toScreenOp('+')">+</button>
+          <button onclick="toScreenOp('-')">-</button>
+          <button onclick="toScreenOp('*')">x</button>
+          <button onclick="toScreenOp('/')">/</button>
           <button onclick="equalFunc()">=</button>
         </div>
         <div class="basic-functions">
@@ -44,7 +44,7 @@
             <button onclick="toScreen(9)">9</button>
           </div>
           <div class="num-sections">
-            <button onclick="toScreen(-1)">+/-</button>
+            <button onclick="toScreen('-')">+/-</button>
             <button onclick="toScreen(0)">0</button>
             <button onclick="toScreen('.')">.</button>
           </div>
